Yet another fix intended to be in 50aeeab442eec8cb120922ee496e18ed6dbce90c.

--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -12,7 +12,7 @@
           </span>
         </a>
 
-        <a href ng-if="showEditorAction('saveDone')"
+        <a href ng-show="showEditorAction('saveDone')"
           class="group-symmetrical--left highlighted override-disabled" ng-click="subEditorDone()">
           <span class="text-edit" ng-bind="isPropertyEdited() ? 'save' : 'done'"></span>
         </a>
