--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -13,7 +13,7 @@
           </span>
         </a>
 
-        <a href ng-if="showEditorAction('saveDone')"
+        <a href ng-show="showEditorAction('saveDone')"
           class="group-symmetrical--left highlighted override-disabled" ng-click="subEditorDone()">
           <span class="text-edit" ng-bind="isPropertyEdited() ? 'save' : 'done'"></span>
         </a>
