Fix wrong title height and missing right padding in note and list editor when favorite is hidden. Height: Give some time (with requestAnimationFrame) for the siblings of the inline element using ng-if to be rendered into DOM before adjusting. Right padding: Replaced ng-show with ng-if.

--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -68,14 +68,15 @@
             <div class="group-mixed large">
               <div class="group-mixed--middle">
                 <textarea class="text-heading-primary large" ng-model="list.trans.title"
-                  input-model-validator ng-trim="false" msd-elastic ng-keydown="listTitlebarTextKeyDown($event)"
+                  input-model-validator ng-trim="false" msd-elastic msd-elastic-inline
+                  ng-keydown="listTitlebarTextKeyDown($event)"
                   editable-field editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)"
                   ng-disabled="readOnly"
                   placeholder="enter list title&#8230;" maxlength="128" autocapitalize="none" autocorrect="off">
                 </textarea>
               </div>
 
-              <div ng-show="showListAction('favorite')" class="group-mixed--right">
+              <div ng-if="showListAction('favorite')" class="group-mixed--right">
                 <a href class="link-navigation" swiper-click="clickFavorite()">
                   <span class="icon-star large" ng-class="!isFavoriteList(list) && 'inactive'"></span>
                 </a>
