--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -70,7 +70,8 @@
             <div class="group-mixed large">
               <div class="group-mixed--middle">
                 <textarea id="noteEditorTitleInput" class="text-heading-primary large"
-                  ng-model="note.trans.title" input-model-validator ng-trim="false" msd-elastic
+                  ng-model="note.trans.title" input-model-validator ng-trim="false"
+                  msd-elastic msd-elastic-inline
                   ng-change="inputChanged()" ng-keydown="noteTitlebarTextKeyDown($event)"
                   editable-field
                   editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)"
@@ -79,7 +80,7 @@
                 </textarea>
               </div>
 
-              <div ng-show="showNoteProperty('favorite')" class="group-mixed--right">
+              <div ng-if="showNoteProperty('favorite')" class="group-mixed--right">
                 <a href class="link-navigation" swiper-click="clickFavorite()">
                   <span class="icon-star large" ng-class="!note.trans.favorited && 'inactive'"></span>
                 </a>
