Fixed elastic.js location

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -36,11 +36,11 @@
   <script src="static/lib/angularjs/angular-sanitize.js"></script>
 
   <script src="static/lib/base64.js"></script>
-  <script src="static/lib/elastic.js"></script>
   <script src="static/lib/clamp.js"></script>
   <script src="static/lib/lawnchair/lawnchair.js"></script>
   <script src="static/lib/lawnchair/lawnchair-dom.js"></script>
 
+  <script src="static/common/elastic.js"></script>
   <script src="static/common/fastclick.js"></script>
   <script src="static/common/common.js"></script>
   <script src="static/common/DateService.js"></script>
