--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -26,6 +26,7 @@
   <script>
     var delayMockAPIResponse = true;
     jasmine.getJSONFixtures().fixturesPath = 'test/json';
+    var cordovaDeviceReady = true;
   </script>
 
   <script src="static/lib/angularjs/angular.js"></script>
