More descriptive names for contexts and archive

--- a/frontend/core/src/main/webapp/static/app/main/settings.html
+++ b/frontend/core/src/main/webapp/static/app/main/settings.html
@@ -61,7 +61,7 @@
           icon-checkbox="'contexts'" ng-click="featureCheckboxClicked('contexts')"/>
       </div>
       <div class="group-mixed--middle">
-        <span class="text-link">contexts</span>
+        <span class="text-link">task contexts</span>
       </div>
     </div>
 
@@ -72,7 +72,7 @@
           icon-checkbox="'archive'" ng-click="featureCheckboxClicked('archive')"/>
       </div>
       <div class="group-mixed--middle">
-        <span class="text-link" ng-class="isToggleDisabled('archive') && 'downplayed'">archive</span>
+        <span class="text-link" ng-class="isToggleDisabled('archive') && 'downplayed'">lists archive</span>
       </div>
     </div>
 
