Hide premium features for now from non-alfa-non-admin users

--- a/frontend/core/src/main/webapp/static/app/main/settings.html
+++ b/frontend/core/src/main/webapp/static/app/main/settings.html
@@ -44,8 +44,9 @@
       </div>
       <div class="group-mixed--middle">
         <span class="text-link" ng-class="isToggleDisabled('lists') && 'downplayed'">lists</span><br/>
-        <span class="text-details downplayed">lists are used to group tasks and notes, and can be shared with
-        other people</span>
+        <span class="text-details downplayed">lists are used to group tasks and
+        notes</span><span class="text-details downplayed" ng-if="usePremiumFeatures()">, and can be
+        shared with other people</span>
       </div>
     </div>
 
