Undebugged version of changing email

--- a/frontend/core/src/main/webapp/static/app/user/userDetails.html
+++ b/frontend/core/src/main/webapp/static/app/user/userDetails.html
@@ -11,6 +11,16 @@
         </a>
       </div>
     </div>
+    <div class="group-mixed vertically-centered">
+      <a href class="group-mixed--middle link" swiper-click="openEditor('user', undefined, 'email')">
+        <span class="text-link">change email</span>
+      </a>
+      <div class="group-mixed--right">
+        <a href ng-click="openEditor('user', undefined, 'email')">
+          <span class="text-navigation-forward large"></span>
+        </a>
+      </div>
+    </div>
   </section>
   <section ng-if="activeDetails === 'about'" class="container-content">
     <h2 class="group-heading justified row">about</h2>
