More consistent paths for landing page: when using static everywhere for static assets, it is much easier to create rewrite filters, and to combine the landing and app pages together.

--- a/frontend/core/src/main/webapp/landing/download.html
+++ b/frontend/core/src/main/webapp/landing/download.html
@@ -6,29 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="extended mind &ndash; task and note organizer that keeps you zen">
   <title>extended mind</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/foundation.min.css">
-  <link rel="stylesheet" href="css/animate-animo.css" >
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/em-animation.css">
+  <link rel="stylesheet" href="static/css/normalize.css">
+  <link rel="stylesheet" href="static/css/foundation.min.css">
+  <link rel="stylesheet" href="static/css/animate-animo.css" >
+  <link rel="stylesheet" href="static/css/main.css">
+  <link rel="stylesheet" href="static/css/em-animation.css">
 
-  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-touch-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-touch-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon-180x180.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="static/favicon/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="static/favicon/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="static/favicon/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="static/favicon/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="static/favicon/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="static/favicon/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="static/favicon/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="static/favicon/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon-180x180.png">
   <meta name="apple-mobile-web-app-title" content="extended mind">
-  <link rel="icon" type="image/png" href="favicon/favicon-192x192.png" sizes="192x192">
-  <link rel="icon" type="image/png" href="favicon/favicon-160x160.png" sizes="160x160">
-  <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16">
-  <link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="static/favicon/favicon-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="static/favicon/favicon-160x160.png" sizes="160x160">
+  <link rel="icon" type="image/png" href="static/favicon/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="static/favicon/favicon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="static/favicon/favicon-32x32.png" sizes="32x32">
   <meta name="msapplication-TileColor" content="#2b5797">
-  <meta name="msapplication-TileImage" content="favicon/mstile-144x144.png">
+  <meta name="msapplication-TileImage" content="static/favicon/mstile-144x144.png">
   <meta name="application-name" content="extended mind">
 
   <script>
@@ -74,11 +74,11 @@
 
       <div class="download-buttons">
         <div class="pull-left">
-          <a href="itms://itunes.com/apps/extendedmind"><img style="width: 120px" src="img/download-app-store.png"/></a><br/>
+          <a href="itms://itunes.com/apps/extendedmind"><img style="width: 120px" src="static/img/download-app-store.png"/></a><br/>
           <span class="text-details">iphone 4s or later</span>
         </div>
         <div class="pull-right">
-          <a href="market://details?id=org.extendedmind"><img style="width: 120px" src="img/download-google-play.png"/></a><br/>
+          <a href="market://details?id=org.extendedmind"><img style="width: 120px" src="static/img/download-google-play.png"/></a><br/>
           <span class="text-details">4.4 kitkat or later</span>
         </div>
       </div>
@@ -92,7 +92,7 @@
   <script type='text/javascript' src='//code.jquery.com/jquery-2.1.3.min.js'></script>
   <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
   <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js'></script>
-  <script type='text/javascript' src='js/foundation.min.js'></script>
+  <script type='text/javascript' src='static/js/foundation.min.js'></script>
   <script>
     $(document).foundation();
   </script>
