Untested email verification process, possibility to resend verification email. Added emailVerified to test users, excpet info@ext.md. Moved terms.html and privacy.html to static/ folder for easier setup.

--- a/frontend/core/src/main/webapp/static/app/base/listPicker.html
+++ b/frontend/core/src/main/webapp/static/app/base/listPicker.html
@@ -23,7 +23,7 @@
   </div>
 
   <p ng-if="useSubHeadings && getLowerLists().length && !listSelectionDone" class="row">
-    <span class="text-heading-primary" ng-bind="upperSubHeading"></span></br>
+    <span class="text-heading-primary" ng-bind="upperSubHeading"></span><br(>
   </p>
   <div ng-if="!listSelectionDone" class="row-vertically-centered"
     ng-repeat="upperList in getUpperLists() | filter:notSelectedListAndNotThisList track by upperList.trans.uuid || $index"
@@ -34,7 +34,7 @@
   </div>
 
   <p ng-if="useSubHeadings && getLowerLists().length && !listSelectionDone" class="row">
-    <span class="text-heading-primary" ng-bind="lowerSubHeading"></span></br>
+    <span class="text-heading-primary" ng-bind="lowerSubHeading"></span><br/>
   </p>
   <div ng-if="useSubHeadings && getLowerLists().length && !listSelectionDone" class="row-vertically-centered"
     ng-repeat="lowerList in getLowerLists() | filter:notSelectedListAndNotThisList track by lowerList.trans.uuid || $index"
