--- a/frontend/core/src/main/webapp/static/app/entry/entryHome.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryHome.html
@@ -13,7 +13,7 @@
             <span class="icon-play"></span>
           </div>
           <div id="em-animation-0">
-            <span class="icon-logo-text"></span></br></br>
+            <span class="icon-logo-text"></span><br/><br/>
             <span>task and note organizer that keeps you zen</span>
           </div>
           <div id="em-animation-1" class="hide">
