--- a/frontend/core/src/main/webapp/static/app/main/settings.html
+++ b/frontend/core/src/main/webapp/static/app/main/settings.html
@@ -4,7 +4,7 @@
 
     <!-- VERSION -->
     <p class="row">
-      <span class="text-heading-primary">version</span></br>
+      <span class="text-heading-primary">version</span><br/>
     </p>
     <p class="row">
       <span class="text-teaser" ng-bind="extendedMindVersion"></span>
@@ -12,7 +12,7 @@
 
     <!-- FEATURES -->
     <p class="row">
-      <span class="text-heading-primary">features</span></br>
+      <span class="text-heading-primary">features</span><br/>
     </p>
 
     <div class="group-mixed">
@@ -87,7 +87,7 @@
 
     <!-- GENERAL -->
     <p class="row">
-      <span class="text-heading-primary">general</span></br>
+      <span class="text-heading-primary">general</span><br/>
     </p>
 
     <div class="group-mixed">
@@ -111,7 +111,7 @@
     </div>
 
     <p ng-if="agendaCalendarSettingVisible" class="row">
-      <span class="text-heading-primary">this device</span></br>
+      <span class="text-heading-primary">this device</span><br/>
     </p>
     <div ng-if="agendaCalendarSettingVisible" class="group-mixed vertically-centered">
       <a href class="group-mixed--middle link" swiper-click="openEditor('user', undefined, 'agendaCalendar')">
