--- a/frontend/core/src/main/webapp/static/app/user/userDetails.html
+++ b/frontend/core/src/main/webapp/static/app/user/userDetails.html
@@ -21,6 +21,58 @@
         </a>
       </div>
     </div>
+    <p class="row">
+      <span class="text-heading-primary">general</span><br/>
+    </p>
+    <div class="group-mixed">
+      <div class="group-mixed--middle">
+        <span class="text-field--title" ng-bind="getUserEmail()"></span>
+      </div>
+      <div class="group-mixed--right">
+        <span class="text-field--label">email</span>
+      </div>
+    </div>
+    <div class="group-mixed text-field">
+      <div class="group-mixed--middle link-search-result">
+        <div ng-if="isEmailVerified()" class="text-field--title">
+          <span>email verified</span>
+        </div>
+        <div ng-if="!isEmailVerified()" class="text-field--title">
+          <span class="text-danger">email not verified,</span>
+          <a href class="link-inline" swiper-click="resendEmailVerification()"
+            ng-class="(!verificationResendInProgress) ? 'highlighted' : 'link-disable downplayed'">
+            <span ng-bind="verificationResendInProgress ? 'resent' : 'resend message?'"></span>
+          </a>
+          <span ng-if="resendOffline"class="text-error"><br/>can't connect. are you online?</span>
+        </div>
+      </div>
+      <div class="group-mixed--right">
+        <span class="text-field--label">status</span>
+      </div>
+    </div>
+    <div class="group-mixed text-field">
+      <div class="group-mixed--middle">
+        <span class="text-field--title">
+          {{::user.created | date:'EEE d MMMM y hh:mm' | lowercase}}
+        </span>
+      </div>
+      <div class="group-mixed--right">
+        <span class="text-field--label">since</span>
+      </div>
+    </div>
+    <!--p class="row">
+      <span class="text-heading-primary">danger zone</span><br/>
+    </p>
+    <div class="group-mixed vertically-centered">
+      <a href class="group-mixed--middle link" swiper-click="openEditor('user', undefined, 'delete')">
+        <span class="text-link">delete user</span>
+      </a>
+      <div class="group-mixed--right">
+        <a href ng-click="openEditor('user', undefined, 'delete')">
+          <span class="text-navigation-forward large"></span>
+        </a>
+      </div>
+    </div-->
   </section>
   <section ng-if="activeDetails === 'about'" class="container-content">
     <h2 class="group-heading justified row">about</h2>
