--- a/frontend/core/src/main/webapp/static/app/user/userDetails.html
+++ b/frontend/core/src/main/webapp/static/app/user/userDetails.html
@@ -60,19 +60,19 @@
         <span class="text-field--label">since</span>
       </div>
     </div>
-    <!--p class="row">
+    <p class="row">
       <span class="text-heading-primary">danger zone</span><br/>
     </p>
     <div class="group-mixed vertically-centered">
       <a href class="group-mixed--middle link" swiper-click="openEditor('user', undefined, 'delete')">
-        <span class="text-link">delete user</span>
+        <span class="text-link">delete account</span>
       </a>
       <div class="group-mixed--right">
         <a href ng-click="openEditor('user', undefined, 'delete')">
           <span class="text-navigation-forward large"></span>
         </a>
       </div>
-    </div-->
+    </div>
   </section>
   <section ng-if="activeDetails === 'about'" class="container-content">
     <h2 class="group-heading justified row">about</h2>
