--- a/frontend/app/src/static/app/main/pageNotFound.html
+++ b/frontend/app/src/static/app/main/pageNotFound.html
@@ -1,19 +1,14 @@
-<div>
-  <h3>extended mind</h3>
-
-  <div>
-    <ul>
-      <li>
-        <h2><a href="#/my">home</a></h2>
-      </li>
-    </ul>
+<div class="container-master" ng-controller="PageNotFoundController" vertical-resize="entry">
+  <div class="container-fluid">
+    <section class="container-content">
+      <h2 class="group-heading instruction row">page not found</h2>
+      <div class="row">&nbsp;</div>
+      <div class="textgroup-ingress row">
+        unfortunately what you were looking for does not exist
+      </div>
+      <div class="group-heading row">
+        <a href ng-click="goHome()" class="highlighted">click here</a> to go back to the app
+      </div>
+    </section>
   </div>
-
-  <p>
-    &nbsp;
-  </p>
-
-  <p>
-    404 Not Found
-  </p>
 </div>
