Updated modal when logging in to third simultaneous session with free account. User is now asked to go to the app store to update the app to be able to upgrade to premium version.

--- a/frontend/app/src/static/app/base/modal.html
+++ b/frontend/app/src/static/app/base/modal.html
@@ -32,6 +32,7 @@
             <a href ng-switch-when="link" class="highlighted" ng-click="textNode.action()">
               <span ng-bind="textNode.data"></span>
             </a>
+            <span ng-switch-when="separator"><br><br></span>
           </span>
         </div>
 
